# waifu2x-ncnn-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI-Linux-x64-Clang.yml  CI-Linux-x64-GCC.yml  CI-MacOS-Universal-Clang.yml  CI-Windows-x64-MSVC.yml  Release.yml  test_pip.yml
src/: CMakeLists.txt  waifu2x_ncnn_vulkan.py  waifu2x_wrapped.cpp  waifu2x_wrapped.h
src/waifu2x-ncnn-vulkan/src/: waifu2x.cpp  waifu2x.h
src/waifu2x_ncnn_py/: __init__.py  waifu2x_ncnn_vulkan.py
test/: test_waifu2x.py
tests/: test_waifu2x.py
waifu2x_ncnn_py/: __init__.py
