[project]
name = "waifu2x-ncnn-py"
version = "1.3.1"
authors = [
    { name = "Tohrusky", email = "65994850+Tohrusky@users.noreply.github.com" },
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
dependencies = [
    "opencv-python",
    "pillow",
    "pathlib"
]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "scikit-image"
]
lint = [
    "pre-commit",
    "ruff",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/Final2x/waifu2x-ncnn-py"
Repository = "https://github.com/Final2x/waifu2x-ncnn-py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts.dev]
composite = [
    "pdm install --dev",
    "pre-commit install"
]
help = "Install the dev packages"

[tool.pdm.scripts.test]
cmd = "pytest tests --cov=src --cov-report=xml --cov-report=html"
help = "Run tests with coverage"

[tool.pdm.scripts.lint]
composite = [
    "ruff check . --fix --exit-non-zero-on-fix",
    "ruff format .",
    "mypy src/waifu2x_ncnn_py tests",
]
help = "Check code style against linters"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
disable_error_code = "attr-defined"




[tool.ruff]
line-length = 120
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["pdm"]
combine-as-imports = true

[tool.coverage.run]
omit = ["src/waifu2x_ncnn_py"]
